--- a/themes/hugo-nederburg-theme/layouts/_default/single.html
+++ b/themes/hugo-nederburg-theme/layouts/_default/single.html
@@ -89,7 +89,7 @@
     	{{ if and (isset .Params "writer") $writer.email }}
     <img alt='{{ .Params.writer | default .Site.Params.author }}' src="https://www.gravatar.com/avatar/{{ md5 $writer.email }}?s=100&d=identicon" class='avatar avatar-72 photo' height='72' width='72'>
     {{ else }}
-      <img alt='{{ .Params.writer | default .Site.Params.author }}' src="https://www.gravatar.com/avatar/{{ md5 .Site.Params.email }}?s=100&d=identicon" class='avatar avatar-72 photo' height='72' width='72'>
+      <img alt='{{ .Params.writer | default .Site.Params.author }}' src="/img/avatar.png" class='avatar avatar-72 photo' height='72'>
     {{ end }}
     <span>
       Written by:<a href="{{ $writer.link | default .Site.Params.authorlink | absURL}}" title="Posts by {{ .Params.writer | default .Site.Params.author }}" rel="author">{{ .Params.writer | default .Site.Params.author }}</a> </span>
@@ -150,6 +150,14 @@ title="email icon"></i>
 href="{{ . }}">
 <i class="fa fa-instagram"
 title="instagram icon"></i>
+</a>
+{{end}}
+
+{{ with $writer.lastfm }}
+<a class="lastfm" target="_blank"
+href="{{ . }}">
+<i class="fa fa-lastfm-square"
+title="lastfm icon"></i>
 </a>
 {{end}}
 
