--- a/themes/hugo-nederburg-theme/layouts/partials/footer.html
+++ b/themes/hugo-nederburg-theme/layouts/partials/footer.html
@@ -60,7 +60,16 @@
         </a>
         </li>
         {{end}}
-
+        
+        {{ with .Site.Params.social.lastfm }}
+        <li>
+        <a href="{{ . }}"  class="lastfm" target="_blank">
+            <i class="fa fa-lastfm-square" title="lastfm"></i>
+            <span class="screen-reader-text">last.fm</span>
+        </a>
+        </li>
+        {{end}}
+        
         {{ with .Site.Params.social.email }}
         <li>
         <a href="mailto:{{ . }}"  class="email">
@@ -94,16 +103,6 @@
         <a href="{{ . }}"  class="github" target="_blank">
             <i class="fa fa-github" title="github"></i>
             <span class="screen-reader-text">github</span>
-        </a>
-        </li>
-        {{end}}
-
-
-        {{ with .Site.Params.social.pinterest }}
-        <li>
-        <a href="{{ . }}"  class="pinterest" target="_blank">
-            <i class="fa fa-pinterest" title="pinterest"></i>
-            <span class="screen-reader-text">pinterest</span>
         </a>
         </li>
         {{end}}
